solved FileNotFoundException in AlkylStructureFragmenterTest; implemented default fragmentation test for AlkylStructureFragmenter;