@@ -35,8 +35,6 @@ import org.openscience.cdk.interfaces.IAtom;
 import org.openscience.cdk.interfaces.IAtomContainer;
 import org.openscience.cdk.interfaces.IAtomContainerSet;
 import org.openscience.cdk.interfaces.IBond;
-import org.openscience.cdk.io.IChemObjectReader;
-import org.openscience.cdk.io.MDLV3000Reader;
 import org.openscience.cdk.io.iterator.IteratingSDFReader;
 import org.openscience.cdk.silent.SilentChemObjectBuilder;
 import org.openscience.cdk.smiles.SmiFlavor;
@@ -64,7 +62,7 @@ public class AlkylStructureFragmenterTest extends AlkylStructureFragmenter{
     /**
      * File containing the structure data for the expected fragments of structures used in this test.
      */
-    public final File testExpectedFragmentsFile = new File("src/test/resources/ASF_Expected_Fragments.sdf");
+    public final File testExpectedFragmentsFile = new File("src\\test\\resources\\ASF_Expected_Fragments.sdf");
     /**
      * IteratingSDFReader for the structure data file testExpectedFragmentsFile.
      */
@@ -72,7 +70,7 @@ public class AlkylStructureFragmenterTest extends AlkylStructureFragmenter{
     /**
      * File containing the structure data of the structures used in this test.
      */
-    public final File testStructuresFile = new File("./test/resources/ASF_Test_Structures.sdf");
+    public final File testStructuresFile = new File("src\\test\\resources\\ASF_Test_Structures.sdf");
     /**
      * IteratingSDFReader for the structure data file testStructuresFile.
      */
@@ -80,17 +78,24 @@ public class AlkylStructureFragmenterTest extends AlkylStructureFragmenter{
     /**
      * Private AtomContainerSet containing the expected structures as AtomContainers.
      */
-    private AtomContainerSet testStructuresACSet;
+    private IAtomContainerSet testStructuresACSet;
+    private List<IAtomContainer> testResultFragmentsACList;
+    private IAtomContainerSet testResultACSet;
+    private IAtomContainerSet testExpectedFragmentsACSet;
+    private List<IAtomContainer> testExpectedFragmentsACList;
     /**
      * Private List containing test structures.
      */
-    private List<IAtomContainer> testStructuresList;
+    //private Hash<IAtomContainer> testStructuresHashSet;
     /**
      * Private AlkylStructureFragmenter used in this test, currently without special parameters.
      */
     private final AlkylStructureFragmenter basicAlkylStructureFragmenter = new AlkylStructureFragmenter();
     private IAtom[] testAtomArray;
     private IBond[] testBondArray;
+    static {
+        Locale.setDefault(Locale.of("en", "GB"));
+    }
 
     /**
      * Constructor that sets the default locale to british english, which is needed for correct functioning of the
@@ -98,52 +103,19 @@ public class AlkylStructureFragmenterTest extends AlkylStructureFragmenter{
      */
     public AlkylStructureFragmenterTest() throws FileNotFoundException
     {
-        this.testStructuresACSet = this.readStructureToACSet(this.testStructuresFile);
-        this.testStructuresList = new ArrayList<>(this.testStructuresACSet.getAtomContainerCount());
-        for (IAtomContainer tmpAtomContainer :
-                this.testStructuresACSet.atomContainers()) {
-            this.testStructuresList.add(tmpAtomContainer);
-        }
-        Locale.setDefault(new Locale("en", "GB"));
+        this.testStructuresACSet = new AtomContainerSet();
+        this.testStructuresACSet = readStructureToACSet(this.testStructuresFile);
+        this.testExpectedFragmentsACSet = readStructureToACSet(this.testExpectedFragmentsFile);
+        this.testExpectedFragmentsACList = new ArrayList<>(this.testExpectedFragmentsACSet.getAtomContainerCount());
+        //this.testAtomArray = this.basicAlkylStructureFragmenter.fillAtomArray(tmpAC);
+        this.testAtomArray = this.basicAlkylStructureFragmenter.fillAtomArray(this.testStructuresACSet.getAtomContainer(0));
+        //this.testBondArray = this.basicAlkylStructureFragmenter.fillBondArray(tmpAC);
+        this.testBondArray = this.basicAlkylStructureFragmenter.fillBondArray(this.testStructuresACSet.getAtomContainer(0));
+        //Locale.setDefault(new Locale("en", "GB"));
 
     }
 
-
-    private AtomContainerSet readStructureToACSet(File aFile) throws FileNotFoundException {
-        IteratingSDFReader tmpSDFReader = new IteratingSDFReader(new FileReader(aFile), new SilentChemObjectBuilder());
-        AtomContainerSet tmpACSet = new AtomContainerSet();
-        String tmpIndexString = "ASFTest.AtomContainerIndex";
-        int tmpIndex = 0;
-        while (tmpSDFReader.hasNext()) {
-            IAtomContainer tmpAtomContainer = tmpSDFReader.next();
-            tmpAtomContainer.setProperty(tmpIndexString, tmpIndex);
-            try {
-                AtomContainerManipulator.percieveAtomTypesAndConfigureAtoms(tmpAtomContainer);
-            } catch (CDKException aCDKException) {
-                throw new RuntimeException(aCDKException);
-            }
-            tmpACSet.addAtomContainer(tmpAtomContainer);
-            tmpIndex++;
-        }
-        return tmpACSet;
-    }
-
-    /**
-     * Utility method generating SMILES notation strings for a given AtomContainerSet.
-     *
-     * @param anAtomContainer given AtomContainerSet
-     * @return List containing the generated Strings
-     * @throws CDKException if SmilesGenerator is unable to generate String from structure
-     */
-
-    private List<String> generateSMILESFromACSet(IAtomContainer anAtomContainer) throws CDKException {
-        SmilesGenerator tmpSmilesGenerator = new SmilesGenerator(SmiFlavor.Canonical);
-        List<String> tmpSmilesList = new ArrayList<>(anAtomContainer.getAtomCount());
-        tmpSmilesList.add(tmpSmilesGenerator.create(anAtomContainer));
-        return tmpSmilesList;
-    }
-
-
+    //<editor-fold desc="@Test Public Methods">
     /**
      * Tests correct instantiation and basic settings retrieval.
      *
@@ -168,10 +140,9 @@ public class AlkylStructureFragmenterTest extends AlkylStructureFragmenter{
      * @throws InvocationTargetException if target method cannot be invoked
      * @throws IllegalAccessException if method cannot be accessed
      */
-
     @Test
     public void markRingsTest() throws NoSuchMethodException, InvocationTargetException, IllegalAccessException {
-        IAtomContainer tmpRingsAC = this.testStructuresList.get(0);
+        IAtomContainer tmpRingsAC = this.testStructuresACSet.getAtomContainer(0);
         this.testAtomArray = this.basicAlkylStructureFragmenter.fillAtomArray(tmpRingsAC);
         this.testBondArray = this.basicAlkylStructureFragmenter.fillBondArray(tmpRingsAC);
 
@@ -182,8 +153,6 @@ public class AlkylStructureFragmenterTest extends AlkylStructureFragmenter{
         this.basicAlkylStructureFragmenter.markRings(tmpRingsAC, this.testAtomArray, this.testBondArray);
         //ToDo: find way to compare structures without extracting tested substructures
     }
-
-
     /**
      * Test method for AlkylStructureFragmenter.markConjugatedPiSystems().
      *
@@ -191,18 +160,18 @@ public class AlkylStructureFragmenterTest extends AlkylStructureFragmenter{
      * @throws InvocationTargetException if target method cannot be invoked
      * @throws IllegalAccessException if method cannot be accessed
      */
-
     @Test
     public void markConjugatedPiSystemsTest() throws NoSuchMethodException, InvocationTargetException, IllegalAccessException {
-        IAtomContainer tmpConjugatedAC = this.testStructuresList.get(0);
-        Method tmpMarkConjugated = this.basicAlkylStructureFragmenter.getClass().getDeclaredMethod("markConjugatedPiSystems", IAtomContainer.class);
+        //IAtomContainer tmpConjugatedAC = this.testStructuresHashSet.getFirst();
+        //this.basicAlkylStructureFragmenter.markConjugatedPiSystems();
+        /*
+        Method tmpMarkConjugated = this.basicAlkylStructureFragmenter.getClass().getDeclaredMethod("AlkylStructureFragmenter.markConjugatedPiSystems", IAtomContainer.class);
         tmpMarkConjugated.setAccessible(true);
         //problem: marking on local(ASF) private variables
         tmpMarkConjugated.invoke(this.basicAlkylStructureFragmenter, tmpConjugatedAC);
+        */
         //ToDo: find way to compare structures without extracting tested substructures
     }
-
-
     /**
      * Test method for AlkylStructureFragmenter.saturateWithImplicitHydrogen().
      *
@@ -210,19 +179,16 @@ public class AlkylStructureFragmenterTest extends AlkylStructureFragmenter{
      * @throws InvocationTargetException if target method cannot be invoked
      * @throws IllegalAccessException if method cannot be accessed
      */
-
     @Test
     public void saturateWithImplicitHydrogenTest() throws NoSuchMethodException, InvocationTargetException, IllegalAccessException {
         IAtomContainerSet tmpSaturateACSet = new AtomContainerSet();
-        tmpSaturateACSet.addAtomContainer(this.testStructuresList.get(0));
+        tmpSaturateACSet.addAtomContainer(this.testStructuresACSet.getAtomContainer(0));
         Method tmpSaturate = this.basicAlkylStructureFragmenter.getClass().getDeclaredMethod("saturateWithImplicitHydrogen", IAtomContainerSet.class);
         tmpSaturate.setAccessible(true);
         //problem?
         List<IAtomContainer> tmpACList = (List<IAtomContainer>) tmpSaturate.invoke(this.basicAlkylStructureFragmenter, tmpSaturateACSet);
         //ToDo: generate test structures with open valences to be saturated
     }
-
-
     /**
      * Test method for AlkylStructureFragmenter.separateDisconnectedStructures().
      *
@@ -230,17 +196,14 @@ public class AlkylStructureFragmenterTest extends AlkylStructureFragmenter{
      * @throws InvocationTargetException if target method cannot be invoked
      * @throws IllegalAccessException if method cannot be accessed
      */
-
     @Test
     public void separateDisconnectedStructuresTest() throws NoSuchMethodException, InvocationTargetException, IllegalAccessException {
-        IAtomContainer tmpDisconnectedAC = this.testStructuresList.get(0);
+        IAtomContainer tmpDisconnectedAC = this.testStructuresACSet.getAtomContainer(0);
         Method tmpSeparateDisconnectedAC = this.basicAlkylStructureFragmenter.getClass().getDeclaredMethod("separateDisconnectedStructures", IAtomContainer.class);
         tmpSeparateDisconnectedAC.setAccessible(true);
         IAtomContainerSet tmpDisconnectedACSet = (IAtomContainerSet) tmpSeparateDisconnectedAC.invoke(this.basicAlkylStructureFragmenter, tmpDisconnectedAC);
         //ToDo: generate disconnected structures in one AtomContainer
     }
-
-
     /**
      * Test method for AlkylStructureFragmenter.extractFragments().
      *
@@ -248,18 +211,18 @@ public class AlkylStructureFragmenterTest extends AlkylStructureFragmenter{
      * @throws InvocationTargetException if target method cannot be invoked
      * @throws IllegalAccessException if method cannot be accessed
      */
-
     @Test
     public void extractFragmentsTest() throws NoSuchMethodException, InvocationTargetException, IllegalAccessException {
         //problem: no way to take input AC as they are local(ASF) private variables
-        IAtomContainer tmpDisconnectedAC = this.testStructuresList.get(0);
-        Method tmpExtractFragments = this.basicAlkylStructureFragmenter.getClass().getDeclaredMethod("extractFragments");
-        tmpExtractFragments.setAccessible(true);
-        IAtomContainerSet tmpExtractedACSet = (IAtomContainerSet) tmpExtractFragments.invoke(this.basicAlkylStructureFragmenter);
+        IAtomContainer tmpDisconnectedAC = this.testStructuresACSet.getAtomContainer(0);
+        IAtomContainerSet tmpExtractFragments;
+        try {
+            tmpExtractFragments = this.basicAlkylStructureFragmenter.extractFragments(this.testAtomArray, this.testBondArray);
+        } catch (CloneNotSupportedException e) {
+            throw new RuntimeException(e);
+        }
         //ToDo: generate structures with marked substructures (mark with code)
     }
-
-
     /**
      * Test method for AlkylStructureFragmenter.dissectLinearChain().
      *
@@ -270,7 +233,7 @@ public class AlkylStructureFragmenterTest extends AlkylStructureFragmenter{
     @Test
     public void dissectLinearChainTest() throws NoSuchMethodException, InvocationTargetException, IllegalAccessException {
         //get linear test structure from ACList
-        IAtomContainer tmpDissectLinearChainAC = this.testStructuresList.get(0);//correct index needed
+        IAtomContainer tmpDissectLinearChainAC = this.testStructuresACSet.getAtomContainer(0);//correct index needed
         Method tmpDissectMethod = this.basicAlkylStructureFragmenter.getClass().getDeclaredMethod("dissectLinearChain", IAtomContainer.class, int.class);
         tmpDissectMethod.setAccessible(true);
         IAtomContainer tmpNoRestrictAC = (IAtomContainer) tmpDissectMethod.invoke(this.basicAlkylStructureFragmenter, tmpDissectLinearChainAC, 0);
@@ -288,62 +251,63 @@ public class AlkylStructureFragmenterTest extends AlkylStructureFragmenter{
         this.basicAlkylStructureFragmenter.setFragmentSaturationSetting(AlkylStructureFragmenter.FRAGMENT_SATURATION_OPTION_DEFAULT);
         this.basicAlkylStructureFragmenter.setFragmentSideChainsSetting(AlkylStructureFragmenter.FRAGMENT_SIDE_CHAINS_SETTING_DEFAULT);
         this.basicAlkylStructureFragmenter.setMaxChainLengthSetting(AlkylStructureFragmenter.MAX_CHAIN_LENGTH_SETTING_DEFAULT);
-
         for (IAtomContainer tmpAtomContainer :
                 this.testStructuresACSet.atomContainers()) {
             Assertions.assertFalse(this.basicAlkylStructureFragmenter.shouldBeFiltered(tmpAtomContainer));
             Assertions.assertFalse(this.basicAlkylStructureFragmenter.shouldBePreprocessed(tmpAtomContainer));
             Assertions.assertTrue(this.basicAlkylStructureFragmenter.canBeFragmented(tmpAtomContainer));
         }
-        try (MDLV3000Reader tmpMDLReader = new MDLV3000Reader(new FileReader("src/test/resources/TestASFStructure1.mol"), IChemObjectReader.Mode.RELAXED)) {
-            IAtomContainer tmpOriginalMolecule = tmpMDLReader.read(SilentChemObjectBuilder.getInstance().newAtomContainer());
-            AtomContainerManipulator.percieveAtomTypesAndConfigureAtoms(tmpOriginalMolecule);
-            /*
-            File aFile = new File("src/test/resources/ASF_Test_COCONUT_subset_sample.sdf");
-            IteratingSDFReader tmpSDFReader = new IteratingSDFReader(new FileInputStream(aFile),
-                    SilentChemObjectBuilder.getInstance());
-            IAtomContainerSet tmpOriginalMoleculeSet = new AtomContainerSet();
-            while (tmpSDFReader.hasNext()) {
-                IAtomContainer tmpAtomContainer = tmpSDFReader.next();
-                if (tmpAtomContainer != null) {
-                    AtomContainerManipulator.percieveAtomTypesAndConfigureAtoms(tmpAtomContainer);
-                    tmpOriginalMoleculeSet.addAtomContainer(tmpAtomContainer);
-                }
-            }
-            */
-
-            this.basicAlkylStructureFragmenter.setFragmentSaturationSetting(AlkylStructureFragmenter.FRAGMENT_SATURATION_OPTION_DEFAULT);
-            this.basicAlkylStructureFragmenter.setMaxChainLengthSetting(AlkylStructureFragmenter.MAX_CHAIN_LENGTH_SETTING_DEFAULT);
-            //extract to unit tests, keep tmpFragmenter settings
-            Assertions.assertFalse(this.basicAlkylStructureFragmenter.shouldBeFiltered(tmpOriginalMolecule));
-            Assertions.assertFalse(this.basicAlkylStructureFragmenter.shouldBePreprocessed(tmpOriginalMolecule));
-            Assertions.assertTrue(this.basicAlkylStructureFragmenter.canBeFragmented(tmpOriginalMolecule));
-            //
-            List<IAtomContainer> tmpFragmentList;
-            tmpFragmentList = this.basicAlkylStructureFragmenter.fragmentMolecule(tmpOriginalMolecule);
-            SmilesGenerator tmpGenerator = new SmilesGenerator(SmiFlavor.Canonical);
-            List<String> tmpCheckList = new ArrayList<>();
-
-            //list of expected molecules after fragmentation
-            List<String> tmpExpectedList = new ArrayList<>();
-            tmpExpectedList.add("C=CC=C1C=2C=CC=CC2CCC1");
-            tmpExpectedList.add("*C(*)*");
-            tmpExpectedList.add("*C(*)(*)*");
-            tmpExpectedList.add("C");
-            tmpExpectedList.add("CC");
-            tmpExpectedList.add("C");
-            tmpExpectedList.add("C");
-            tmpExpectedList.add("C");
-            tmpExpectedList.add("C");
-            for (IAtomContainer tmpFragment : tmpFragmentList) {
-                String tmpString = tmpGenerator.create(tmpFragment);
-                System.out.println(tmpString);
-                tmpCheckList.add(tmpString);
-            }
-            Assertions.assertTrue(tmpCheckList.size() == tmpExpectedList.size()
-                    && tmpCheckList.containsAll(tmpExpectedList)
-                    && tmpExpectedList.containsAll(tmpCheckList));
+        this.testResultFragmentsACList = this.basicAlkylStructureFragmenter.fragmentMolecule(this.testStructuresACSet.getAtomContainer(0));
+        for (IAtomContainer tmpAC : this.testExpectedFragmentsACSet.atomContainers()) {
+            this.testExpectedFragmentsACList.add(tmpAC);
         }
+        Assertions.assertTrue(this.compareListsIgnoringOrder(new ArrayList<>(this.testResultFragmentsACList),
+                new ArrayList<>(this.testExpectedFragmentsACList)));
     }
+    //</editor-fold>
+
+    //<editor-fold desc="Private Methods">
+    private boolean compareListsIgnoringOrder(ArrayList aList1, ArrayList aList2) {
+        if (aList1 == null || aList2 == null) return false;
+        if (aList1.size() != aList2.size()) return false;
+        for (Object o : aList1) {
+            aList2.remove(o);
+        }
+        return !aList2.isEmpty();
+    }
+
+    /**
+     * Utility method generating SMILES notation strings for a given AtomContainerSet.
+     *
+     * @param anAtomContainer given AtomContainerSet
+     * @return List containing the generated Strings
+     * @throws CDKException if SmilesGenerator is unable to generate String from structure
+     */
+    private List<String> generateSMILESFromACSet(IAtomContainer anAtomContainer) throws CDKException {
+        SmilesGenerator tmpSmilesGenerator = new SmilesGenerator(SmiFlavor.Canonical);
+        List<String> tmpSmilesList = new ArrayList<>(anAtomContainer.getAtomCount());
+        tmpSmilesList.add(tmpSmilesGenerator.create(anAtomContainer));
+        return tmpSmilesList;
+    }
+
+    private IAtomContainerSet readStructureToACSet(File aFile) throws FileNotFoundException {
+        IteratingSDFReader tmpSDFReader = new IteratingSDFReader(new FileReader(aFile), new SilentChemObjectBuilder());
+        AtomContainerSet tmpACSet = new AtomContainerSet();
+        String tmpIndexString = "ASFTest.AtomContainerIndex";
+        int tmpIndex = 0;
+        while (tmpSDFReader.hasNext()) {
+            IAtomContainer tmpAtomContainer = tmpSDFReader.next();
+            tmpAtomContainer.setProperty(tmpIndexString, tmpIndex);
+            try {
+                AtomContainerManipulator.percieveAtomTypesAndConfigureAtoms(tmpAtomContainer);
+            } catch (CDKException aCDKException) {
+                throw new RuntimeException(aCDKException);
+            }
+            tmpACSet.addAtomContainer(tmpAtomContainer);
+            tmpIndex++;
+        }
+        return tmpACSet;
+    }
+    //</editor-fold>
 
 }
